# theblockchainkiller

./: .dockerignore  .gitignore  CMakeLists.txt  Dockerfile  LICENSE  Makefile  README.md  get_app_version.py
.github/workflows/: deliver-dockerhub.yaml
include/: base64.h  block.h  blockchain.h  consensus_thread.h  cryptography.h  endian.h  example.h  hash.h  linked_list.h  miner.h  mining_thread.h  networking.h  peer_discovery.h  peer_discovery_bootstrap_server.h  return_codes.h  transaction.h
src/: base64.c  block.c  blockchain.c  endian.c  example.c  hash.c  linked_list.c  main.c  miner.c  mining_thread.c  networking.c  peer_discovery.c  peer_discovery_bootstrap_server.c  peer_discovery_server.c  run_miner.py  transaction.c
tests/: README.md  file_paths.c  file_paths.h  main.c  test_base64.c  test_base64.h  test_block.c  test_block.h  test_blockchain.c  test_blockchain.h  test_cryptography.h  test_endian.c  test_endian.h  test_example.c  test_example.h  test_linked_list.c  test_linked_list.h  test_miner.c  test_miner.h  test_mining_thread.c  test_mining_thread.h  test_networking.c  test_networking.h  test_peer_discovery.c  test_peer_discovery.h  test_transaction.c  test_transaction.h
tests/fixtures/: blockchain_4_blocks_no_transactions
